@@ -140,6 +140,14 @@
 ? intfouriersin(t=0,[[1],1],1/2,exp(-t^2))
 0.40814855737449071901817138939207402766415488055603385596287457597235580104
 2051564345987971241512
+? check(intnumgauss(x=0,1,sin(x)),1-cos(1))
+-96
+? check(intnumgauss(x=0,1,1/(x+1)),log(2))
+-oo
+? check(intnumgauss(x=0,1,1/(x+1)^(4/3)),3-3/2^(1/3))
+-95
+? check(intnumgauss(x=2,1,x),-3/2)
+-oo
 ? \p38
    realprecision = 38 significant digits
 ? intnumromb(x=0,1,sin(x))
@@ -171,4 +179,4 @@
   ***   Warning: integral from -oo to -oo.
 0
 ? print("Total time spent: ",gettime);
-Total time spent: 6260
+Total time spent: 6012
