@@ -99,6 +99,11 @@ check(intfourierexp(t=[-oo,1],[oo,1], 1/2, exp(-t^2)), sqrt(Pi)*exp(-Pi^2/4))
 check(intfouriercos(t=0,[[1],1], 1/2, exp(-t^2)), sqrt(Pi)/2*exp(-Pi^2/4))
 intfouriersin(t=0,[[1],1], 1/2, exp(-t^2))
 
+check(intnumgauss(x=0,1,sin(x)), 1-cos(1))
+check(intnumgauss(x=0,1,1/(x+1)), log(2))
+check(intnumgauss(x=0,1,1/(x+1)^(4/3)), 3-3/2^(1/3))
+check(intnumgauss(x=2,1,x),-3/2)
+
 \p38
 intnumromb(x=0,1,sin(x))
 intnumromb(x=0,1,sin(x), 1)
