@@ -253,7 +253,8 @@ AP 81- [GP] central simple algebra package, GP functions
    89- Configure --with-runtime-perl option
 PB 90- Faster matrix multiplication over finite fields
    91- allow content(t_VECSMALL)
-   92 [libpari] ZX_div_by_X_1
+   92- [libpari] ZX_div_by_X_1
+   93- intnumgauss / intnumgaussinit: Gauss-Legendre quadrature
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
